// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test artwork queries should find an artwork by id 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": null,
      "Artworks": Array [
        Object {
          "title": "amazingsongT1itle",
        },
      ],
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should not find an artwork by id and throw an error 1`] = `
Object {
  "data": Object {
    "findArtwork": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": Object {
        "message": "Couldn't find artwork",
      },
      "Artworks": null,
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query both auctions and fixed 1`] = `
Object {
  "data": Object {
    "listArtworks": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": null,
      "Artworks": Array [
        Object {
          "handle": "4",
          "saleType": "fixed",
        },
        Object {
          "handle": "5",
          "saleType": "fixed",
        },
        Object {
          "handle": "art 1",
          "saleType": "auction",
        },
        Object {
          "handle": "1",
          "saleType": "auction",
        },
        Object {
          "handle": "2",
          "saleType": "auction",
        },
        Object {
          "handle": "3",
          "saleType": "auction",
        },
      ],
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only auctions  1`] = `
Object {
  "data": Object {
    "listArtworks": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": null,
      "Artworks": Array [
        Object {
          "handle": "3",
          "saleType": "auction",
        },
        Object {
          "handle": "2",
          "saleType": "auction",
        },
        Object {
          "handle": "1",
          "saleType": "auction",
        },
        Object {
          "handle": "art 1",
          "saleType": "auction",
        },
      ],
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales  1`] = `
Object {
  "data": Object {
    "listArtworks": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": null,
      "Artworks": Array [
        Object {
          "handle": "5",
          "saleType": "fixed",
        },
        Object {
          "handle": "4",
          "saleType": "fixed",
        },
      ],
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Test artwork queries should query only fixed sales that are listed  1`] = `
Object {
  "data": Object {
    "listArtworks": Object {
      "ArtworkArgumentsConflict": null,
      "ArtworkNotFound": null,
      "Artworks": Array [
        Object {
          "handle": "5",
          "saleType": "fixed",
        },
        Object {
          "handle": "4",
          "saleType": "fixed",
        },
      ],
      "ClientError": null,
      "UserUnauthorized": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
